# simple-flask-api

./: app.py  pyproject.toml
